Fix Edge line wrap issue

--- a/src/WebComponents/Select/select.scss
+++ b/src/WebComponents/Select/select.scss
@@ -89,6 +89,7 @@ $border-color: #ddd;
                 padding-left: var(--theme-h5);
                 line-height: calc(var(--theme-h2) - 2px);
                 height: calc(var(--theme-h2) - 2px);
+                white-space: nowrap;
 
                 &:not(.group) {
                     cursor: pointer;
